# AttnPacker

./: README.md  pyproject.toml
.github/workflows/: tests.yml
benchmark/rosetta/: batch_run_rosetta_packer.py
benchmark/sidechain/: gather_stats.py  standardize_scs.py
docs/: inference_and_sampling.md
src/AttenPacker/: __init__.py  inference_runner.py  runner.py  sampling_runner.py  util.py
src/AttenPacker/assessment/: metrics.py  sidechain.py
src/AttenPacker/assessment/model_eval/: model_evaluator.py  stats_handler.py
src/AttenPacker/common/: global_config.py  helpers.py  rigids.py
src/AttenPacker/common/data/: utils.py
src/AttenPacker/common/io/: dssp_utils.py  extract_cdrs.py  pdb_io.py  pdb_utils.py  select_atoms.py
src/AttenPacker/examples/: post_process.py
src/AttenPacker/features/: default_feature_generator.py  feature.py  feature_config.py  feature_generator.py  feature_utils.py  input_embedding.py  input_features.py
src/AttenPacker/features/masking/: inter_chain.py  intra_chain.py  masking_utils.py  partition.py
src/AttenPacker/features/test/: test_config.py  test_config_parse.py  test_input_embeddiing.py  test_masking.py
src/AttenPacker/models/: inference_utils.py
src/AttenPacker/models/fbb_design/: fbb_model.py  train.py  train_utils.py
src/AttenPacker/models/model_abc/: protein_model.py  structure_model.py  train.py
src/AttenPacker/models/utils/: dataset_augment_fns.py  feature_flags.py  model_eval.py  model_io.py  opt_parse.py
src/AttenPacker/networks/attention/: node_attention.py  pair_attention.py
src/AttenPacker/networks/loss/: loss_fn.py  (+8 more)
src/AttenPacker/scp_postprocess/: sidechain_rigid_utils.py
tests/: test_project_pdb.py  test_runner.py  test_runners.py  test_util.py
(+52 files in other folders)
